--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
-    "koa-body": "^4.1.0"
+    "koa-body": "^4.1.0",
+    "koa-compress": "^3.0.0",
+    "koa-session": "^5.10.1"
   }
 }
