--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
+    "co-mysql": "^1.0.0",
     "koa-body": "^4.1.0",
     "koa-compress": "^3.0.0",
-    "koa-session": "^5.10.1"
+    "koa-session": "^5.10.1",
+    "mysql": "^2.16.0"
   }
 }
