--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "koa-static": "^5.0.0"
   },
   "devDependencies": {
+    "ejs": "^2.6.1",
     "koa-body": "^4.1.0",
     "koa-compress": "^3.0.0",
     "koa-session": "^5.10.1",
+    "koa-views": "^6.2.0",
     "mysql": "^2.17.0"
   }
 }
