--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "koa-compress": "^3.0.0",
     "koa-session": "^5.10.1",
     "koa-views": "^6.2.0",
-    "mysql": "^2.17.0"
+    "mysql": "^2.17.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
   }
 }
