--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "koa-views": "^6.2.0",
     "mysql": "^2.17.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
+    "request-promise": "^4.2.4"
   }
 }
